Fix z-index values for elements in home component and update search query to use regex in server index

--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -109,14 +109,14 @@ span.meet img {
   position: absolute;
   left: 0;
   bottom: 160px;
-  z-index: -1;
+  z-index: 0;
 }
 
 .hero-shape2 {
   position: absolute;
   right: 0;
   bottom: 200px;
-  z-index: -1;
+  z-index: 0;
 }
 
 .hero-bottom-shape {
@@ -243,7 +243,7 @@ span.meet img {
   position: absolute;
   right: 0;
   bottom: -335px;
-  z-index: -1;
+  z-index: 0;
 }
 
 .latest-post-shape img {
